[package]
name         = "ibc-chain-registry"
version      = "0.25.0"
edition      = "2021"
license      = "Apache-2.0"
keywords     = ["cosmos", "ibc", "relayer", "chain", "registry"]
repository   = "https://github.com/informalsystems/hermes"
authors      = ["Informal Systems <hello@informal.systems>"]
rust-version = "1.70"
description  = """
    Service to fetch data from the chain-registry
"""

[dependencies]
ibc-proto         = { version = "0.34.0", features = ["serde"] }
ibc-relayer-types = { version = "0.25.0", path = "../relayer-types" }
tendermint-rpc = { version = "0.33.2", features = [
    "http-client",
    "websocket-client",
] }

async-trait = "0.1.72"
flex-error  = { version = "0.4.4", default-features = false }
futures     = { version = "0.3.27", features = ["executor"] }
http        = "0.2"
itertools   = "0.10.5"
reqwest     = { version = "0.11.13", features = ["rustls-tls", "json"], default-features = false }
serde       = "1.0.166"
serde_json  = "1"
tokio       = "1.17.0"
tracing     = "0.1.36"
