[package]
name         = "ibc-chain-registry"
version      = "0.27.2"
edition      = "2021"
license      = "Apache-2.0"
keywords     = ["cosmos", "ibc", "relayer", "chain", "registry"]
repository   = "https://github.com/informalsystems/hermes"
authors      = ["Informal Systems <hello@informal.systems>"]
rust-version = "1.71"
description  = """
    Service to fetch data from the chain-registry
"""

[dependencies]
ibc-relayer-types = { version = "0.27.2", path = "../relayer-types" }
ibc-proto         = { version = "0.42.0", features = ["serde"] }
tendermint-rpc    = { version = "0.35.0", features = ["http-client", "websocket-client"] }

async-trait = "0.1.72"
flex-error  = { version = "0.4.4", default-features = false }
futures     = { version = "0.3.27", features = ["executor"] }
http        = "0.2"
itertools   = "0.10.5"
reqwest     = { version = "0.11.13", features = ["rustls-tls-native-roots", "json"], default-features = false }
serde       = "1.0.197"
serde_json  = "1"
tokio       = "1.17.0"
tracing     = "0.1.36"
