[package]
name         = "ibc-chain-registry"
version      = "0.29.3"
edition      = "2021"
license      = "Apache-2.0"
keywords     = ["cosmos", "ibc", "relayer", "chain", "registry"]
repository   = "https://github.com/informalsystems/hermes"
authors      = ["Informal Systems <hello@informal.systems>"]
rust-version = "1.76.0"
description  = """
    Service to fetch data from the chain-registry
"""

[dependencies]
ibc-relayer       = { workspace = true }
ibc-relayer-types = { workspace = true }
ibc-proto         = { workspace = true, features = ["serde"] }
tendermint-rpc    = { workspace = true, features = ["http-client", "websocket-client"] }

async-trait = { workspace = true }
flex-error  = { workspace = true }
futures     = { workspace = true, features = ["executor"] }
http        = { workspace = true }
itertools   = { workspace = true }
reqwest     = { workspace = true, features = ["rustls-tls-native-roots", "json"] }
serde       = { workspace = true }
serde_json  = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
