[package]
name         = "ibc-relayer-all-in-one-extra"
version      = "0.1.0"
edition      = "2021"
license      = "Apache-2.0"
readme       = "README.md"
keywords     = ["blockchain", "consensus", "cosmos", "ibc", "tendermint"]
repository   = "https://github.com/informalsystems/ibc-rs"
authors      = ["Informal Systems <hello@informal.systems>"]
rust-version = "1.64"
description  = """
    Implementation of an IBC Relayer in Rust, as a library
"""

[package.metadata.docs.rs]
all-features = true

[features]

[dependencies]
async-trait = "0.1.56"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
ibc-relayer-components = { version = "0.1.0", path = "../relayer-components" }
ibc-relayer-components-extra = { version = "0.1.0", path = "../relayer-components-extra" }
ibc-relayer-all-in-one = { version = "0.1.0", path = "../relayer-all-in-one" }
