[package]
name       = "ibc-relayer-cli"
version    = "1.5.1"
edition    = { workspace = true }
license    = { workspace = true }
readme     = "README.md"
keywords   = ["blockchain", "consensus", "cosmos", "ibc", "tendermint"]
homepage   = { workspace = true }
repository = { workspace = true }
authors    = { workspace = true }
rust-version = { workspace = true }
description  = """
  Hermes is an IBC Relayer written in Rust
"""
default-run = "hermes"

[[bin]]
name = "hermes"

[features]
default     = ["telemetry", "rest-server", "std", "eyre_tracer"]
std         = ["flex-error/std"]
eyre_tracer = ["flex-error/eyre_tracer"]
telemetry   = ["ibc-relayer/telemetry", "ibc-telemetry"]
rest-server = ["ibc-relayer-rest"]

[dependencies]
ibc-relayer-types  = { workspace = true }
ibc-relayer        = { workspace = true }
ibc-telemetry      = { workspace = true, optional = true }
ibc-relayer-rest   = { workspace = true, optional = true }
ibc-chain-registry = { workspace = true }

atty                     = { workspace = true }
chrono                   = { workspace = true }
clap                     = { workspace = true, features = ["cargo"] }
clap_complete            = { workspace = true }
color-eyre               = { workspace = true }
console                  = { workspace = true }
crossbeam-channel        = { workspace = true }
dialoguer                = { workspace = true }
dirs-next                = { workspace = true }
eyre                     = { workspace = true }
flex-error               = { workspace = true, default-features = false, features = ["std", "eyre_tracer"] }
futures                  = { workspace = true }
hdpath                   = { workspace = true }
http                     = { workspace = true }
humantime                = { workspace = true }
itertools                = { workspace = true }
oneline-eyre             = { workspace = true }
regex                    = { workspace = true }
serde                    = { workspace = true, features = ["serde_derive"] }
serde_json               = { workspace = true }
signal-hook              = { workspace = true }
subtle-encoding          = { workspace = true }
tokio                    = { workspace = true, features = ["full"] }
tracing                  = { workspace = true }
tracing-subscriber       = { workspace = true, features = ["fmt", "env-filter", "json"]}

[dependencies.tendermint]
workspace = true
features = ["secp256k1"]

[dependencies.tendermint-rpc]
workspace = true
features = ["http-client", "websocket-client"]

[dependencies.tendermint-light-client-verifier]
workspace = true

[dependencies.abscissa_core]
workspace = true
features = ["options"]

[dev-dependencies]
abscissa_core = { workspace = true, features = ["testing"] }
once_cell.workspace = true
regex.workspace = true
serial_test.workspace = true
