[package]
name       = "ibc-relayer-cli"
version    = "1.8.2"
edition    = "2021"
license    = "Apache-2.0"
readme     = "README.md"
keywords   = ["blockchain", "consensus", "cosmos", "ibc", "tendermint"]
homepage   = "https://hermes.informal.systems/"
repository = "https://github.com/informalsystems/hermes"
authors    = ["Informal Systems <hello@informal.systems>"]
rust-version = "1.71"
description  = """
  Hermes is an IBC Relayer written in Rust
"""
default-run = "hermes"

[[bin]]
name = "hermes"

[features]
default     = ["telemetry", "rest-server", "std", "eyre_tracer"]
std         = ["flex-error/std"]
eyre_tracer = ["flex-error/eyre_tracer"]
telemetry   = ["ibc-relayer/telemetry", "ibc-telemetry"]
rest-server = ["ibc-relayer-rest"]

[dependencies]
ibc-relayer-types  = { version = "0.27.2", path = "../relayer-types" }
ibc-relayer        = { version = "0.27.2", path = "../relayer" }
ibc-telemetry      = { version = "0.27.2", path = "../telemetry", optional = true }
ibc-relayer-rest   = { version = "0.27.2", path = "../relayer-rest", optional = true }
ibc-chain-registry = { version = "0.27.2" , path = "../chain-registry" }

clap                     = { version = "3.2", features = ["cargo"] }
clap_complete            = "3.2"
color-eyre               = "0.6"
console                  = "0.15.5"
crossbeam-channel        = "0.5.11"
dialoguer                = "0.11.0"
dirs-next                = "2.0.0"
eyre                     = "0.6.12"
flex-error               = { version = "0.4.4", default-features = false, features = ["std", "eyre_tracer"] }
futures                  = "0.3.27"
hdpath                   = "0.6.3"
http                     = "0.2"
humantime                = "2.1"
itertools                = "0.10.5"
oneline-eyre             = "0.1"
regex                    = "1.9.5"
serde                    = { version = "1.0", features = ["serde_derive"] }
serde_json               = "1"
signal-hook              = "0.3.17"
subtle-encoding          = "0.5"
tokio                    = { version = "1.0", features = ["full"] }
tracing                  = "0.1.36"
tracing-subscriber       = { version = "0.3.14", features = ["fmt", "env-filter", "json"]}
time                     = "0.3"
[dependencies.tendermint]
version = "0.35.0"
features = ["secp256k1"]

[dependencies.tendermint-rpc]
version = "0.35.0"
features = ["http-client", "websocket-client"]

[dependencies.tendermint-light-client-verifier]
version = "0.35.0"

[dependencies.abscissa_core]
version = "=0.6.0"
features = ["options"]

[dev-dependencies]
abscissa_core = { version = "=0.6.0", features = ["testing"] }
once_cell = "1.19"
regex = "1.9"
serial_test = "3.0.0"
