[package]
name       = "ibc-relayer-cli"
version    = "1.10.3"
edition    = "2021"
license    = "Apache-2.0"
readme     = "README.md"
keywords   = ["blockchain", "consensus", "cosmos", "ibc", "tendermint"]
homepage   = "https://hermes.informal.systems/"
repository = "https://github.com/informalsystems/hermes"
authors    = ["Informal Systems <hello@informal.systems>"]
rust-version = "1.76.0"
description  = """
  Hermes is an IBC Relayer written in Rust
"""
default-run = "hermes"

[[bin]]
name = "hermes"

[dependencies]
ibc-relayer-types  = { workspace = true }
ibc-relayer        = { workspace = true }
ibc-telemetry      = { workspace = true }
ibc-relayer-rest   = { workspace = true }
ibc-chain-registry = { workspace = true }

abscissa_core                    = { workspace = true, features = ["options"] }
clap                             = { workspace = true, features = ["cargo"] }
clap_complete                    = { workspace = true }
color-eyre                       = { workspace = true }
console                          = { workspace = true }
crossbeam-channel                = { workspace = true }
dialoguer                        = { workspace = true }
dirs-next                        = { workspace = true }
eyre                             = { workspace = true }
flex-error                       = { workspace = true, features = ["std", "eyre_tracer"] }
futures                          = { workspace = true }
hdpath                           = { workspace = true }
http                             = { workspace = true }
humantime                        = { workspace = true }
itertools                        = { workspace = true }
oneline-eyre                     = { workspace = true }
regex                            = { workspace = true }
serde                            = { workspace = true, features = ["serde_derive"] }
serde_json                       = { workspace = true }
signal-hook                      = { workspace = true }
subtle-encoding                  = { workspace = true }
tendermint-light-client-verifier = { workspace = true }
tendermint-rpc                   = { workspace = true, features = ["http-client", "websocket-client"] }
tendermint                       = { workspace = true, features = ["secp256k1"] }
time                             = { workspace = true }
tokio                            = { workspace = true, features = ["full"] }
tracing                          = { workspace = true }
tracing-subscriber               = { workspace = true, features = ["fmt", "env-filter", "json"] }

[dev-dependencies]
abscissa_core = { workspace = true, features = ["testing"] }
once_cell     = { workspace = true }
regex         = { workspace = true }
serial_test   = { workspace = true }
