[package]
name         = "ibc-relayer-framework"
version      = "0.1.0"
edition      = "2021"
license      = "Apache-2.0"
readme       = "README.md"
keywords     = ["blockchain", "consensus", "cosmos", "ibc", "tendermint"]
repository   = "https://github.com/informalsystems/ibc-rs"
authors      = ["Informal Systems <hello@informal.systems>"]
rust-version = "1.64"
description  = """
    Implementation of an IBC Relayer in Rust, as a library
"""

[package.metadata.docs.rs]
all-features = true

[features]

[dependencies]
async-trait = "0.1.56"

[dev-dependencies]
eyre = "0.6.8"
flex-error = "0.4.4"
ibc-relayer-runtime = { path = "../../crates/relayer-runtime" }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.36"