[package]
name         = "ibc-relayer-rest"
version      = "0.27.0"
authors      = ["Informal Systems <hello@informal.systems>"]
edition      = "2021"
license      = "Apache-2.0"
readme       = "README.md"
keywords     = ["ibc", "rest", "api", "cosmos", "tendermint"]
homepage     = "https://hermes.informal.systems/"
repository   = "https://github.com/informalsystems/hermes"
rust-version = "1.71"
description  = """
  Rust implementation of a RESTful API server for Hermes
"""

[dependencies]
ibc-relayer-types = { version = "0.27.0", path = "../relayer-types" }
ibc-relayer       = { version = "0.27.0", path = "../relayer" }

crossbeam-channel = "0.5"
serde             = "1.0"
tracing           = "0.1"
axum              = "0.6"
tokio             = "1.26"

[dev-dependencies]
reqwest    = { version = "0.11.16", features = ["json"], default-features = false }
toml       = "0.8.8"
