[package]
name         = "ibc-relayer-rest"
version      = "0.28.0"
authors      = ["Informal Systems <hello@informal.systems>"]
edition      = "2021"
license      = "Apache-2.0"
readme       = "README.md"
keywords     = ["ibc", "rest", "api", "cosmos", "tendermint"]
homepage     = "https://hermes.informal.systems/"
repository   = "https://github.com/informalsystems/hermes"
rust-version = "1.71.1"
description  = """
  Rust implementation of a RESTful API server for Hermes
"""

[dependencies]
ibc-relayer-types = { workspace = true }
ibc-relayer       = { workspace = true }

axum              = { workspace = true }
crossbeam-channel = { workspace = true }
serde             = { workspace = true }
tokio             = { workspace = true }
tracing           = { workspace = true }

[dev-dependencies]
reqwest    = { workspace = true, features = ["json"] }
serde_json = { workspace = true }
toml       = { workspace = true }
