[package]
name         = "ibc-relayer-runtime"
version      = "0.1.0"
edition      = "2021"
license      = "Apache-2.0"
readme       = "README.md"
keywords     = ["blockchain", "consensus", "cosmos", "ibc", "tendermint"]
repository   = "https://github.com/informalsystems/ibc-rs"
authors      = ["Informal Systems <hello@informal.systems>"]
rust-version = "1.64"
description  = """
    Implementation of an IBC Relayer in Rust, as a library
"""

[package.metadata.docs.rs]
all-features = true

[features]

[dependencies]
async-trait = "0.1.56"
futures = "0.3"
tokio = "1.24"
tokio-stream = "0.1"
tracing = "0.1.36"
flex-error = { version = "0.4.4", default-features = false }
ibc-relayer-framework = { version = "0.1.0", path = "../relayer-framework" }
