[package]
name         = "ibc-relayer-solomachine"
version      = "0.25.0"
edition      = "2021"
license      = "Apache-2.0"
readme       = "README.md"
keywords     = ["blockchain", "consensus", "cosmos", "ibc", "tendermint"]
repository   = "https://github.com/informalsystems/ibc-rs"
authors      = ["Informal Systems <hello@informal.systems>"]
rust-version = "1.68"
description  = "An IBC relayer for relaying between Cosmos and Solomachin clients."

[package.metadata.docs.rs]
all-features = true

[features]
default   = ["flex-error/std", "flex-error/eyre_tracer"]

[dependencies]
ibc-proto         = { version = "0.32.0" }
ibc-relayer       = { version = "0.25.0", path = "../relayer" }
ibc-relayer-types = { version = "0.25.0", path = "../relayer-types" }
ibc-relayer-cosmos = { version = "0.25.0", path = "../relayer-cosmos" }
ibc-telemetry     = { version = "0.25.0", path = "../telemetry" }
ibc-relayer-runtime = { version = "0.1.0", path = "../relayer-runtime" }
ibc-relayer-all-in-one = { version = "0.1.0", path = "../relayer-all-in-one" }
ibc-relayer-components = { version = "0.1.0", path = "../relayer-components" }
ibc-relayer-components-extra = { version = "0.1.0", path = "../relayer-components-extra" }

serde = "1.0"
serde_derive = "1.0"
async-trait = "0.1.56"
flex-error = { version = "0.4.4", default-features = false }
prost = { version = "0.11" }
eyre = "0.6.8"
tokio = "1.24"
itertools = "0.10.3"
futures = "0.3"
tracing = "0.1.36"
secp256k1 = "0.27.0"
sha2 = "0.10.7"
crypto-hash = "0.3.4"
bytes = { version = "1.4.0" }

[dependencies.tendermint]
version = "=0.32.0"
features = ["secp256k1"]

[dependencies.tendermint-rpc]
version = "=0.32.0"
features = ["http-client", "websocket-client"]
